# vellum-example-apps

./: LICENSE  README.md
examples/custom-prompt-node/: pyproject.toml
examples/custom-prompt-node/classifier/: inputs.py  sandbox.py  workflow.py
examples/custom-prompt-node/classifier/nodes/: be_happy.py  bot_response.py  cheer_up.py  detect_tone_prompt.py  local_bedrock_node.py  settle_down.py
examples/vercel-ai-chatbot/: .env.example  README.md  auth.ts  cdktf.json  infrastructure.ts  package-lock.json  package.json  pnpm-lock.yaml
examples/vercel-ai-chatbot/app/: actions.ts  layout.tsx
examples/vercel-ai-chatbot/app/(chat)/: page.tsx
examples/vercel-ai-chatbot/app/api/chat/: route.ts
examples/vercel-ai-chatbot/app/api/feedback/: route.ts
examples/vercel-ai-chatbot/app/api/function/: route.ts
examples/vercel-ai-chatbot/app/api/tool/: route.ts
examples/vercel-ai-chatbot/app/learn-more/: page.tsx
examples/vercel-ai-chatbot/components/: chat-history.tsx  chat-list.tsx  chat-message-actions.tsx  chat-message-component.tsx  chat-message-feedback-dialog.tsx  chat-message.tsx  chat-panel.tsx  chat-share-dialog.tsx  chat.tsx  empty-deployment-selector.tsx  empty-screen.tsx  footer.tsx  header.tsx  prompt-form.tsx  sidebar-actions.tsx  sidebar-desktop.tsx  sidebar-item.tsx  sidebar-items.tsx  sidebar-list.tsx  user-menu.tsx
examples/vercel-ai-chatbot/components/ui/: icons.tsx
examples/vercel-ai-chatbot/lib/: constants.ts  types.ts
examples/vercel-ai-chatbot/lib/hooks/: use-vellum-chat.tsx
examples/vercel-ai-chatbot/workspace/: searchIndexes.ts
(+2 files in other folders)
